--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "@babel/runtime": "^7.0.0",
     "@rollup/plugin-babel": "^5.0.0",
     "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.2.0",
     "@rollup/plugin-url": "^5.0.0",
+    "dot-prop": "^6.0.1",
     "eslint": "^7.17.0",
     "eslint-plugin-svelte3": "^3.0.0",
+    "i18next": "^19.8.4",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^1.4.2",
     "rollup": "^2.3.4",
