--- a/package.json
+++ b/package.json
@@ -28,15 +28,20 @@
     "@rollup/plugin-replace": "^2.2.0",
     "@rollup/plugin-url": "^5.0.0",
     "dot-prop": "^6.0.1",
+    "entities": "^2.1.0",
     "eslint": "^7.17.0",
     "eslint-plugin-svelte3": "^3.0.0",
+    "github-buttons": "^2.14.1",
     "i18next": "^19.8.4",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^1.4.2",
+    "prismjs": "^1.23.0",
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "sapper": "^0.28.0",
-    "svelte": "^3.17.3"
+    "showdown": "^1.9.1",
+    "svelte": "^3.17.3",
+    "svelte-icons": "^2.1.0"
   }
 }
