--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "watch": "sapper dev",
     "build": "sapper build --legacy",
-    "export": "sapper export --legacy",
+    "export": "sapper export --legacy --basepath marv-site",
     "start": "node __sapper__/build",
     "lint": "eslint ./src --fix",
     "prettify": "prettier --write ./src"
